--- a/take-note/src/Components/ComponentsApp/Footer.css
+++ b/take-note/src/Components/ComponentsApp/Footer.css
@@ -1,9 +1,11 @@
 .under{
-    background-image: url(../image/fondoFooter.png);
-    height: 12vh;
+    background-image: url(../../image/fondoFooter.png);
+    height: 14vh;
+    width: 100%;
     display: flex;
     justify-content: space-around;
-    margin-top: 117%;
+    margin-top: -28%;
+    position: fixed;
 }
 .logo{
     margin-top: 20px;
