--- a/take-note/src/App.css
+++ b/take-note/src/App.css
@@ -4,7 +4,7 @@
 
 .nuwNote{
   background-color: rgb(247 247 247 /47%);
-  position:fixed;
+  position: relative;
   top:0;
   right:0;
   bottom:0;
