--- a/take-note/src/Components/ComponentsStart/StartNotes.css
+++ b/take-note/src/Components/ComponentsStart/StartNotes.css
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 28px;
+    font-size: 26px;
 }
 .logoInicio{
     width: 300px;
@@ -32,7 +32,8 @@
 .formbutton{
     font-family:'Roboto', sans-serif;
     font-size: 20px;
-    border: solid palevioletred;
+    background-color:  #A3CA50;
+    border: dashed #FDEB01; 
     width: 50%;
     height: 5vh;
     margin-top: 22px;
