--- a/take-note/src/Components/ComponentsApp/Modal.css
+++ b/take-note/src/Components/ComponentsApp/Modal.css
@@ -1,5 +1,5 @@
 .nuwNote{
-    background-color: rgb(247 247 247 /76%);
+    background-color: rgb(9 9 9 / 85%);
     position: absolute;
     height: 100%;
     top:0;
@@ -10,6 +10,20 @@
     display: flex;
     align-content: center;
   };
+  @media (max-width: 508px){
+    .nuwNote{
+    background-color: rgb(9 9 9 / 85%);
+    position: absolute;
+    height: 100%;
+    top:0;
+    right:0;
+    left:0;
+    opacity:1;
+    transition: all 1s;
+    display: flex;
+    justify-content: center;
+  }
+}
   
 .takeNote{
     background-color:white;
@@ -17,9 +31,35 @@
     margin: auto;
     position: sticky;
     width: 440px;
-    height: 255px;
+    height: 405px;
     display: flex;
     flex-flow: column;
-    border: solid yellow;
+    border: solid #00ACEA;
     box-shadow: 7px 6px 9px 4px grey;
+  }
+
+  @media (max-width: 508px ) {
+    .takeNote{
+        text-align: center;
+        width: 68%;
+        border: solid palevioletred;
+        
+    }
+    
+}
+  .close{
+    width: 11%;
+    height: 24px;
+    margin-top: 3px;
+    margin-bottom: 12px;
+    font-size: large;
+    background-color: transparent;
+    outline: none;
+    border: none;
+    margin-left: -14px;
+  }
+  @media (max-width: 508px ){
+    .close{
+      width: 18%;
+    }
   }
