--- a/take-note/src/Components/ComponentsStart/StartNotes.css
+++ b/take-note/src/Components/ComponentsStart/StartNotes.css
@@ -18,7 +18,7 @@
     flex-direction: column;
     align-items: center;
 }
-.startForm input {
+.startFormInput {
     background-color: #F2F2F2;
     font-family:'Roboto', sans-serif;
     font-size: 20px;
